fix(ModalFileList): Firefox overflow bug in modal

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -3,6 +3,7 @@
 
 .fil-content-table
     @extend $table
+    overflow auto
 
 .fil-content-head
     @extend $table-head
